# programming_languages_lab3

./: .gitignore  CMakeSettings.json
solution/: CMakeLists.txt
solution/include/: bmp.h  file_io.h  image.h  rotation.h  utils.h
solution/src/: bmp.c  file_io.c  main.c  rotation.c  utils.c
